Update and rename indexx.html to index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
 
     <header>
-        <img src="IMG_20250324_115146.jpg"
+        <img src="profile.jpg"
      alt="Profile Picture" 
      class="profile-img">
         <h1>Mohiddeen irfan R</h1>
