--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 
         <div class="section" id="resume">
             <h2>Resume</h2>
-            <a href="https://drive.google.com/file/d/1mbX78yadswjx9o_Z-iuX4diPv0Lx5ohd/view?usp=drivesdk" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </div>
         <div class="section" id="certificate">
             <h2>Certificate</h2>
-            <a href="https://drive.google.com/file/d/1mg0vui4yEjb8VM6Ip-4Dq4yKh1CfO_uf/view?usp=drivesdk" target="_blank" class="download-button">Certificate</a>
+            <a href="certificate.pdf" target="_blank" class="download-button">Certificate</a>
         </div>
         
     </div>
